@@ -52,7 +52,7 @@ sub fill_xml {
 }
 
 sub dispatcher {
-	my ($self, $action, $raw, $next_run_date) = @_;
+	my ($self, $action, $raw, $next_run_date, $is_cycle, $time_period) = @_;
 	open (FH, "< $DATA_PATH/action/$action.xml") or die $!;
 	undef $/;
 	my $raw_xml = <FH>;
@@ -62,7 +62,7 @@ sub dispatcher {
 	my $epoch_seconds = time();
 	my $time_type = '';
 
-	$raw_xml = $self->fill_xml ($raw_xml, "user='$ENV{USER}';raw='$raw';uuid='$uuid_string';create_date='$epoch_seconds';next_run_date='$next_run_date'");
+	$raw_xml = $self->fill_xml ($raw_xml, "user='$ENV{USER}';raw='$raw';uuid='$uuid_string';create_date='$epoch_seconds';next_run_date='$next_run_date';time_period='$time_period';cycle='$is_cycle'");
 
 
 	if ($next_run_date == 0)
@@ -85,8 +85,9 @@ sub _time_parser {
 	my ($msg) = @_;
 	my @list_time = <$DATA_PATH/time/*.xml>;
 	my $each_time_file;
-	my %time_tag;
 	my $next_run_date = 0;
+	my $time_is_cycle = 0;
+	my $time_period = 0;
 	my $base_period = 0;
 	my $time_string;
 
@@ -96,33 +97,38 @@ sub _time_parser {
 		$time_string = $each_time_file;
 		$time_string =~ s#.*/##;
 		$time_string =~ s#\.xml##;
-		$time_string =~ s#_# #;
+		$time_string =~ s#_# #g;
 
 		if ("$msg" =~ /\b$time_string\b/i )
 		{
 			SplashBox::show_log ("Got time='$time_string'");
 			my $xml_data = $xml->XMLin("$each_time_file");
 			my $time_code = $xml_data->{"meta"}->{"time_code"};
-			my $time_cycle = $xml_data->{"meta"}->{"cycle"};
-			my $time_period = $xml_data->{"meta"}->{"time_period"};
+			$time_is_cycle = $xml_data->{"meta"}->{"cycle"};
+			$time_period = $xml_data->{"meta"}->{"time_period"};
 
 			my ($time_num, $time_type) = $time_period =~ m#([0-9]+)([a-zA-Z]+)#;
-			if ($time_type eq 'd')
+			if ($time_type eq 'd') # day
 			{
 				$base_period = 60 * 60 * 24;
 			}
+			if ($time_type eq 'm') # munite
+			{
+				$base_period = 60;
+			}
+			if ($time_type eq 'w') # week
+			{
+				$base_period = 60 * 60 * 24 * 7;
+			}
 
-			$next_run_date = time() + ($time_num * $base_period);
-			$time_tag{'time_code'} = $time_code;
-			$time_tag{'time_cycle'} = $time_cycle;
-			$time_tag{'time_period'} = $time_period;
+			$time_period = $base_period * $time_num; #FIXME
+			$next_run_date = time() + $time_period;
 
-			# TODO parse time file here.
 			last;
 		}
 	}
-
-	return $next_run_date;
+	my $ret = [$next_run_date, $time_is_cycle, $time_period];
+	return $ret;
 }
 
 sub parser {
@@ -131,6 +137,9 @@ sub parser {
 	my @list_action = <$DATA_PATH/action/*.xml>;
 	my $action;
 	my $next_run_date = 0;
+	my $is_cycle = 0;
+	my $time_period = 0;
+	my $ret;
 
 
 	foreach $action (@list_action) {
@@ -140,10 +149,11 @@ sub parser {
 		if ("$msg" =~ /\b$action\b/i )
 		{
 			SplashBox::show_log ("Got action='$action'");
-			($next_run_date, $is_cycle) = _time_parser("$msg");
+			$ret = _time_parser("$msg");
+			($next_run_date, $is_cycle, $time_period) = @$ret;
 
 			$is_chat_message = 0;
-			$self->dispatcher ($action, "$msg", $next_run_date);
+			$self->dispatcher ($action, "$msg", $next_run_date, $is_cycle, $time_period);
 			last;
 		}
 	}
