@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<action version="20110125001">
+<action version="20110127001">
 	<meta>
 		<uuid>[uuid]</uuid>
 		<name>[name]</name>
@@ -8,16 +8,18 @@
 		<mail>[mail]</mail>
 		<create_date>[create_date]</create_date>
 		<update_date>[update_date]</update_date>
-		<next_run_date>[next_run_date]</next_run_date>
 		<version>[version]</version>
 		<robot>[robot]</robot>
-		<depend><depend>
+		<depend></depend>
 	</meta>
 	<data>
 		<uuid>{uuid}</uuid>
 		<user>{user}</user>
 		<create_date>{create_date}</create_date>
 		<update_date>{update_date}</update_date>
+		<next_run_date>{next_run_date}</next_run_date>
+		<time_period>{time_period}</time_period>
+		<cycle>{cycle}</cycle>
 		<raw>{raw}</raw>
 	</data>
 </action>
