@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<time version="20110103001">
+	<meta>
+		<uuid>3dbe6c73-067b-45bc-944a-cf31d7b7cd0d</uuid>
+		<name>every_five_minutes</name>
+		<description>Every five minutes</description>
+		<author>Youchen Lee</author>
+		<mail>kobe.lee@splashtop.com</mail>
+		<create_date>1296117176</create_date>
+		<update_date>1296117176</update_date>
+		<version>0.0.1</version>
+		<time_code>0</time_code>
+		<time_period>5m</time_period>
+		<cycle>1</cycle>
+		<depend></depend>
+	</meta>
+</time>
